--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@storybook/addon-a11y": "^8.0.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.26",
+    "@storybook/addon-a11y": "^8.0.5",
     "@storybook/addon-essentials": "^8.0.5",
     "@storybook/addon-interactions": "^8.0.5",
     "@storybook/addon-links": "^8.0.5",
