--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@storybook/test": "^8.0.5",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/jest-axe": "^3.5.9",
     "@types/node": "^20.12.4",
